@@ -21,5 +21,8 @@
       org.hibernate.cache.HashtableCacheProvider
     </property>
     <property name="hibernate.hbm2ddl.auto">update</property>
+    <mapping package="configuration.feeds.db"/>
+    <mapping class="configuration.feeds.db.Feed"/>
+    <mapping class="configuration.feeds.db.News"/>
   </session-factory>
 </hibernate-configuration>
